// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model Buyer {
  username String     @id @default(cuid())
  password String     @default("password")
  name     String     @default("AbdAllah")
  balance  Int        @default(1000000)
  location String     @default("Doha")
  purchase Purchase[]
}

model Item {
  id         String     @id @default(cuid())
  name       String
  itemSeller Seller     @relation(fields: [seller], references: [username], onDelete: Cascade)
  seller     String
  price      Int        @default(10)
  quantity   Int        @default(10)
  purchase   Purchase[]
}

model Seller {
  username String @id @default(cuid())
  password String @default("password")
  name     String

  purchase Purchase[]
  item     Item[]
}

model Purchase {
  purchaseId    String @id @default(cuid())
  purchasedItem Item   @relation(fields: [itemId], references: [id], onDelete: Cascade)
  itemId        String

  purchaseSeller Seller @relation(fields: [seller], references: [username], onDelete: Cascade)
  seller         String

  purchaseBuyer Buyer  @relation(fields: [buyer], references: [username], onDelete: Cascade)
  buyer         String

  year Int @default(2024)
}
