//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Buyer {
  username String [pk]
  password String [not null, default: 'password']
  name String [not null, default: 'AbdAllah']
  balance Int [not null, default: 1000000]
  location String [not null, default: 'Doha']
  purchase Purchase [not null]
}

Table Item {
  id String [pk]
  name String [not null]
  itemSeller Seller [not null]
  seller String [not null]
  price Int [not null, default: 10]
  quantity Int [not null, default: 10]
  purchase Purchase [not null]
}

Table Seller {
  username String [pk]
  password String [not null, default: 'password']
  name String [not null]
  purchase Purchase [not null]
  item Item [not null]
}

Table Purchase {
  purchaseId String [pk]
  purchasedItem Item [not null]
  itemId String [not null]
  purchaseSeller Seller [not null]
  seller String [not null]
  purchaseBuyer Buyer [not null]
  buyer String [not null]
  year Int [not null, default: 2024]
}

Ref: Item.seller > Seller.username [delete: Cascade]

Ref: Purchase.itemId > Item.id [delete: Cascade]

Ref: Purchase.seller > Seller.username [delete: Cascade]

Ref: Purchase.buyer > Buyer.username [delete: Cascade]